[tool.poetry]
name = "ytxt"
version = "0.1.0"
description = "This module downloads subtitles in .vtt file format then it opens it as a regular .txt file removes not needed stuff and in the end it saves to a clean looking .txt file with the same name." 
authors = ["Psyhackological <konradkon@duck.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "ytxt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pylint = "^2.15.9"
poetry = "^1.3.1"
mypy = "^0.991"

[tool.poetry.scripts]
ytxt = "ytxt.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
